remove picture_credit_html form list endpoint
